--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,8 @@ before_deploy:
   - tar xzvf $HOME/cf.tgz -C $HOME
   - travis_retry cf install-plugin autopilot -f -r CF-Community
   - npm install
-  - script: ./bin/run_build.sh
+
+script: /bin/run_build.sh
 
 deploy:
   provider: script
