trying it a different way

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,8 @@ before_deploy:
   - travis_retry curl -L -o $HOME/cf.tgz "https://cli.run.pivotal.io/stable?release=linux64-binary&version=6.15.0"
   - tar xzvf $HOME/cf.tgz -C $HOME
   - travis_retry cf install-plugin autopilot -f -r CF-Community
-  - npm install
-
-script: /bin/run_build.sh
+  - cd node_modules/swagger-ui
+  - npm run build
 
 deploy:
   provider: script
