--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ before_deploy:
   - travis_retry curl -L -o $HOME/cf.tgz "https://cli.run.pivotal.io/stable?release=linux64-binary&version=6.15.0"
   - tar xzvf $HOME/cf.tgz -C $HOME
   - travis_retry cf install-plugin autopilot -f -r CF-Community
+  - npm install
   - cd node_modules/swagger-ui
   - npm run build
 
