still working on deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ before_script:
   - travis_retry pip install -U -r requirements.txt
   - travis_retry pip install -U -r requirements-dev.txt
   - travis_retry npm install -g swagger-tools
+  - . $HOME/.nvm/nvm.sh
+  - nvm install v5.5.0
+  - nvm use v5.5.0
 
 script: py.test
 
