--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,9 @@ before_deploy:
   - travis_retry cf install-plugin autopilot -f -r CF-Community
   - npm install
   - cd node_modules/swagger-ui
+  - npm install
   - gulp
+  - cd ../..
 
 deploy:
   provider: script
