--- a/manifest_base.yml
+++ b/manifest_base.yml
@@ -2,7 +2,7 @@
 path: .
 memory: 1G
 stack: cflinuxfs2
-buildpack: "https://github.com/ddollar/heroku-buildpack-multi.git"
+buildpack: python_buildpack
 domain: 18f.gov
 env:
   NEW_RELIC_CONFIG_FILE: newrelic.ini
