--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_deploy:
   - tar xzvf $HOME/cf.tgz -C $HOME
   - travis_retry cf install-plugin autopilot -f -r CF-Community
   - npm install
+  - npm run build
 
 deploy:
   provider: script
