most things are working, but database is not connecting

--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -7,5 +7,6 @@ services:
   - fec-s3-dev
   - fec-search-dev
 env:
-  NEW_RELIC_APP_NAME: OpenFEC API (development)
+  NEW_RELIC_APP_NAME: fec | api | dev
   NEW_RELIC_ENV: development
+CF_TRACE: true
