--- a/manifest_base.yml
+++ b/manifest_base.yml
@@ -3,9 +3,8 @@ path: .
 memory: 1G
 stack: cflinuxfs2
 buildpack: python_buildpack
-domain: 18f.gov
 env:
-  NEW_RELIC_CONFIG_FILE: newrelic.ini
+  NEW_RELIC_CONFIG_FILE: /home/vcap/app/newrelic.ini
   NEW_RELIC_LOG: stdout
   WEB_CONCURRENCY: 4
 applications:
