--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -9,4 +9,4 @@ services:
 env:
   NEW_RELIC_APP_NAME: OpenFEC API (staging)
   NEW_RELIC_ENV: staging
-  FEC_API_WHITELIST_IPS: "false"
+  FEC_API_WHITELIST_IPS: true
