--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ addons:
   postgresql: '9.4'
 env:
   global:
-  - FEC_CF_USERNAME='true'
-  - FEC_CF_PASSWORD='true'
   - secure: fZSgHvzAttJcq5GYEwp/jo8/hcRs0hW169dTG4VC6vW29sPFjc2R6NuXVzXxGzxkWN16KvUNU+feMiMIse7c2zQIceTmhJh7cz19v+xmmwgqJgv0ln8+7+1rGB6FIblS9C70b2ggKjZ5DYMD4DxCrtQkWkVzQDncdADb4vg0ZA4=
   - secure: OTXWsWgcECe+A21Tsxnz4sipzVaGW1RrtYqOx6/hFgBZPcGeNMz+sJtSH2PQ8tRj4QPljHwH4+X3vRrQDXYE9ToUrV9lV997SXr+ZLwkKrypQGmqFNnygt4fibrtpPtLHIc/KJoLwHMbFC6OZDi9IqVa2OR6JEmeRpi3N5UOqQk=
+  - secure: b8mtTxB1+ZC2uEjFj6K4NjOr5xyprErJl1F3o1z/0iOHIsBaV3MFhv6QbNi+DXbyPGZuYQAIXUzDLFruToc/XTWWK6VFWo16KRKgrdB9JPuBseKDs8sM8pvoIUKbhRDatvN49zYmnsCGdnFN0s5U/fvfnjMIEuSNNgP59CxccL4=
+  - secure: Yc2cMJt6lnFiOV8giiFdI2HHqNszqGVV3djMWKWfno0NTy3sebAV9oF/ioXZehhQouH/nqtBJ34yPDu5svrqANnidLF0TB9+t2B9YTjeTQikO7kqRx4+OT3Q7mD+EROyfVOGhp31A32mqju64lEqX6yg2Cy7n2ZMnP3HRvDn81w=
 before_script:
 - psql -c 'create database "cfdm_unit_test";' -U postgres
 - travis_retry pip install -U pip setuptools wheel
@@ -34,3 +34,5 @@ deploy:
   script: invoke deploy --branch $TRAVIS_BRANCH --yes
   on:
     all_branches: true
+dd:
+  secure: AjwQVNweiXOdYMZp7Uuv4v8Q8n/JenX2o4yKAzx5rOHlcjWlwa0903v2AFgLa0ZhZMhMk9/l+4+HJyBOJ0HxPaRZKKmQ6VGQDqq5oZXzb8aJh/vLnWjkM6GS56xlFQbV+sJbaJS31S17XbC26mWxvEuLsJRina9iTN48gIZZ8E4=
