--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: invoke deploy --branch $TRAVIS_BRANCH --login True --yes
+  script: invoke deploy --branch $TRAVIS_BRANCH --space $TRAVIS_BRANCH --login True --yes
   on:
     all_branches: true
 dd:
