getting rid of the connection string in the logs standardizing names for app in new relic

--- a/manifest_prod.yml
+++ b/manifest_prod.yml
@@ -9,7 +9,7 @@ services:
   - fec-search-prod
 env:
   PRODUCTION: True
-  NEW_RELIC_APP_NAME: OpenFEC API (production)
-  NEW_RELIC_ENV: development
+  NEW_RELIC_APP_NAME: fec | api | production
+  NEW_RELIC_ENV: production
   FEC_API_WHITELIST_IPS: true
   FEC_CACHE_AGE: 3600
