Use space-independent service names
Services are in any case namespaced under spaces.
This allows us to have the manifests be more similar across spaces.

--- a/manifest_base.yml
+++ b/manifest_base.yml
@@ -7,6 +7,8 @@ env:
   NEW_RELIC_CONFIG_FILE: /home/vcap/app/newrelic.ini
   NEW_RELIC_LOG: stdout
   WEB_CONCURRENCY: 4
+services:
+  - fec-api-search
 applications:
 - name: api
 - name: celery-beat
