--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ requests==2.13.0
 elasticsearch==2.4.0
 elasticsearch-dsl==2.1.0
 bandit==1.4.0
-git+https://github.com/timClicks/slate.git
+git+https://github.com/18F/slate.git
 
 # Marshalling
 flask-apispec==0.2.0
