--- a/manifest_prod.yml
+++ b/manifest_prod.yml
@@ -6,6 +6,7 @@ services:
   - fec-creds-prod
   - fec-redis-prod
   - fec-s3-prod
+  - fec-api-search
 env:
   PRODUCTION: True
   NEW_RELIC_APP_NAME: fec | api | production
