--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -5,6 +5,7 @@ services:
   - fec-creds-stage
   - fec-redis-stage
   - fec-s3-stage
+  - fec-api-search
 env:
   NEW_RELIC_APP_NAME: fec | api | stage
   NEW_RELIC_ENV: stage
