--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -2,7 +2,7 @@
 
 # Development
 # TODO(jmcarp) Install from PyPI after 0.2.4 release
-git+https://github.com/18F/rdbms-subsetter
+-e git+https://github.com/18F/rdbms-subsetter#egg=rdbms-subsetter
 
 # Testing
 mock        >= 1.3.0
