--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,13 @@ Flask-SQLAlchemy==2.1
 python-dateutil==2.4.2
 sqlalchemy-postgres-copy==0.3.0
 networkx==1.11
-newrelic==2.78.0.57
+newrelic==2.82.0.62
 SQLAlchemy==1.0.17
 mandrill==1.0.57
 icalendar==3.9.1
 GitPython==1.0.1
 gunicorn==19.7.1
+gevent==1.2.1
 webargs==0.18.0
 slacker==0.8.6
 ujson==1.33
