--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -8,3 +8,9 @@ services:
 env:
   NEW_RELIC_APP_NAME: fec | api | dev
   NEW_RELIC_ENV: development
+- name: celery-worker
+  instances: 1
+  memory: 512M
+  no-route: true
+  health-check-type: process
+  command: celery worker --app webservices.tasks --loglevel INFO --concurrency 2
