--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -8,3 +8,7 @@ services:
 env:
   NEW_RELIC_APP_NAME: fec | api | dev
   NEW_RELIC_ENV: development
+applications:
+  - name: celery-worker
+  instances: 1
+  memory: 512M
