--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -9,3 +9,7 @@ env:
   NEW_RELIC_APP_NAME: fec | api | stage
   NEW_RELIC_ENV: stage
   FEC_API_WHITELIST_IPS: true
+applications:
+  - name: celery-worker
+  instances: 1
+  memory: 512M
