Celery can not scale horizontally without creating errors, this creates the same ratio of workers and memory that we started out with and increases the resources to be be in balance with the other production increases.

--- a/manifest_prod.yml
+++ b/manifest_prod.yml
@@ -15,5 +15,6 @@ applications:
   - name: api
     instances: 4
   - name: celery-worker
-    instances: 4
-    memory: 1G
+    instances: 1
+    memory: 4G
+    command: celery worker --app webservices.tasks --loglevel INFO --concurrency 8
