--- a/manifest_stage.yml
+++ b/manifest_stage.yml
@@ -13,3 +13,4 @@ applications:
   - name: celery-worker
     instances: 1
     memory: 512M
+    command: celery worker --app webservices.tasks --loglevel INFO --concurrency 2
