--- a/manifest_feature.yml
+++ b/manifest_feature.yml
@@ -12,3 +12,4 @@ applications:
   - name: celery-worker
     instances: 1
     memory: 512M
+    command: celery worker --app webservices.tasks --loglevel INFO --concurrency 2
