--- a/manifests/manifest_celery_beat_prod.yml
+++ b/manifests/manifest_celery_beat_prod.yml
@@ -1,11 +1,11 @@
 ---
 inherit: manifest_prod.yml
 env:
-  NEW_RELIC_APP_NAME: fec | celery beat | stage
+  NEW_RELIC_APP_NAME: fec | celery beat | prod
 applications:
-- name: celery-beat
-  instances: 1
-  memory: 500M
-  no-route: true
-  health-check-type: process
-  command: celery beat --app webservices.tasks
+  - name: celery-beat
+    instances: 1
+    memory: 500M
+    no-route: true
+    health-check-type: process
+    command: celery beat --app webservices.tasks
