--- a/manifests/manifest_celery_worker_stage.yml
+++ b/manifests/manifest_celery_worker_stage.yml
@@ -2,9 +2,10 @@
 inherit: manifest_stage.yml
 env:
   NEW_RELIC_APP_NAME: fec | celery worker | stage
-- name: celery-worker
-  instances: 1
-  memory: 1G
-  no-route: true
-  health-check-type: process
-  command: celery worker --app webservices.tasks --loglevel INFO --concurrency 2
+applications:
+  - name: celery-worker
+    instances: 1
+    memory: 1G
+    no-route: true
+    health-check-type: process
+    command: celery worker --app webservices.tasks --loglevel INFO --concurrency 2
