--- a/manifests/manifest_celery_worker_prod.yml
+++ b/manifests/manifest_celery_worker_prod.yml
@@ -1,7 +1,7 @@
 ---
 inherit: manifest_prod.yml
 env:
-  NEW_RELIC_APP_NAME: fec | celery worker | stage
+  NEW_RELIC_APP_NAME: fec | celery worker | prod
 applications:
   - name: celery-worker
     instances: 1
