--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ elasticsearch==2.4.0
 elasticsearch-dsl==2.1.0
 bandit==1.4.0
 git+https://github.com/18F/slate.git
+nltk==3.2.4
 
 # Marshalling
 flask-apispec==0.2.0
