--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,15 +3,14 @@
 git+https://github.com/18F/rdbms-subsetter
 
 # Testing
-mock>=1.3.0
-pytest>=3.0.7
-pytest-cov>=2.3.1
-factory-boy>=2.5.2
-faker>=0.7.5
-nplusone>=0.7.3
-webtest>=2.0.2
-pdbpp>=0.8.3
-pygments>=2.2.0
+pytest==3.1.3
+pytest-cov==2.5.1
+factory_boy==2.8.1
+faker==0.7.18
+nplusone==0.8.0
+webtest==2.0.27
+pdbpp==0.9.1
+pygments==2.2.0
 
 
 #efiling
