Renaming the new services so that we have a smoother transition in services. We can go back and delete the old instances after the new ones are set up and depoloyed

--- a/manifests/manifest_prod.yml
+++ b/manifests/manifest_prod.yml
@@ -3,7 +3,7 @@ inherit: manifest_base.yml
 host: fec-prod-api
 services:
   - fec-creds-prod
-  - fec-redis-prod
+  - fec-ha-redis-prod
   - fec-s3-prod
 env:
   PRODUCTION: True
