--- a/manifests/manifest_dev.yml
+++ b/manifests/manifest_dev.yml
@@ -3,7 +3,7 @@ inherit: manifest_base.yml
 host: fec-dev-api
 services:
   - fec-creds-dev
-  - fec-ha-redis-dev
+  - fec-redis
   - fec-s3-dev
 env:
   NEW_RELIC_ENV: development
