--- a/manifests/manifest_prod.yml
+++ b/manifests/manifest_prod.yml
@@ -3,7 +3,7 @@ inherit: manifest_base.yml
 host: fec-prod-api
 services:
   - fec-creds-prod
-  - fec-ha-redis-prod
+  - fec-redis
   - fec-s3-prod
 env:
   PRODUCTION: True
