Switch pgTAP to runtests() style.
runtests() handle transactions for us and require a bit less accounting.
Unfortunately, on test failure, the runner adds a final, commented line, which
tappy doesn't understand; fix this by grepping-out such lines.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
 script:
   - py.test
   - cd tests/pgtap
-  - psql -d cfdm_unit_test -U postgres -Xf runner.sql | tappy
+  - psql -d cfdm_unit_test -U postgres -Xf runner.sql | grep -v '^#' | tappy
 after_success:
   - travis_retry pip install bandit
   - cd ..
