Fixed btree_gin extension test setup and attempting to fix CircleCI DB connection

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       # PostgreSQL
       - image: circleci/postgres:9.6.2
         environment:
-          - POSTGRES_USER=circleci
-          - POSTGRES_DB=fec-api-test
+          - POSTGRES_USER=postgres
+          - POSTGRES_DB=cfdm_unit_test
 
     working_directory: ~/repo
 
