--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,18 +11,27 @@ jobs:
       # Python
       - image: circleci/python:3.5.3
         environment:
-          - TZ=America/New_York
+          TZ: America/New_York
+          SQLA_TEST_CONN: postgres://postgres@0.0.0.0/cfdm_unit_test
 
       # PostgreSQL
       - image: circleci/postgres:9.6.2
         environment:
-          - POSTGRES_USER=postgres
-          - POSTGRES_DB=cfdm_unit_test
+          POSTGRES_USER: postgres
+          POSTGRES_DB: cfdm_unit_test
 
     working_directory: ~/repo
 
     steps:
       - checkout
+
+      - run:
+          name: Install system dependencies
+          # Commands listed here are from the CircleCI PostgreSQL config docs:
+          # https://circleci.com/docs/2.0/postgres-config/#postgresql-circleci-configuration-example
+          command: |
+            sudo apt-get install postgresql-client
+            echo ‘/usr/lib/postgresql/9.6/bin/:$PATH’ >> $BASH_ENV
 
       - run:
           name: Install Node.js
@@ -36,12 +45,11 @@ jobs:
           - fec-api-dependencies-
 
       - run:
-          name: Install dependencies
+          name: Install project dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install bandit codecov
-            pip install -r requirements.txt -r requirements-dev.txt
+            pip install -r requirements.txt -r requirements-dev.txt -r requirements-ci.txt
             sudo npm install -g swagger-tools
             npm install
             npm run build
@@ -57,15 +65,6 @@ jobs:
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       - run:
-          name: Create the test database
-          # Commands listed here are from the CircleCI PostgreSQL config docs:
-          # https://circleci.com/docs/2.0/postgres-config/#postgresql-circleci-configuration-example
-          command: |
-            sudo apt-get install postgresql-client
-            echo ‘/usr/lib/postgresql/9.6/bin/:$PATH’ >> $BASH_ENV
-            psql -c "create database cfdm_unit_test;" -U postgres
-
-      - run:
           name: Run tests
           command: |
             . venv/bin/activate
@@ -75,9 +74,7 @@ jobs:
           name: Perform post-test checks
           command: |
             . .venv/bin/activate
-            cd ..
-            bandit -r openFEC
-            cd openFEC
+            bandit -r .
             codecov
 
       - store_artifacts:
