--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
       - run:
           name: Perform post-test checks
           command: |
-            . .venv/bin/activate
+            . venv/bin/activate
             bandit -r .
             codecov
 
