--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,5 +79,7 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
       - deploy:
-          - command: invoke deploy --branch $TRAVIS_BRANCH --login True --yes
+          name: Deploy API
+          command: invoke deploy --branch $TRAVIS_BRANCH --login True --yes
