--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,12 @@ jobs:
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       - run:
+          name: Run tests
+          command: |
+            . venv/bin/activate
+            echo TRUE
+
+      - run:
           name: Perform post-test checks
           command: |
             . venv/bin/activate
