Adding tests back

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
           name: Run tests
           command: |
             . venv/bin/activate
-            echo TRUE
+            py.test
 
       - run:
           name: Perform post-test checks
